fixes after review